Reconhecimento Vox - 4 e 5 - Fim!

--- a/javascript/numero-secreto/style.css
+++ b/javascript/numero-secreto/style.css
@@ -23,6 +23,10 @@ h1 {
     font-size: 4em;
 }
 
+h2 {
+    font-size: 2.8em;
+}
+
 h3 {
     font-size:2em;
     margin-top: 20px;
@@ -39,4 +43,12 @@ h3 {
     font-size: 3em;
     padding: 10px;
     margin: 20px;
+}
+
+.btn-jogar {
+    padding: 8px;
+    border: 0;
+    background: var(--primary-color);
+    border-radius: 5px;
+    margin-top: 20px;
 }
